--- a/config.example.yml
+++ b/config.example.yml
@@ -1,10 +1,17 @@
-General:
+Display:
   Color: black
   Label: ffffff
   ChromaKey: 00ff00
-  Result: '000000'
-  ResultBackground: ffffff
-  Commands:
+Twitch:
+  ClientId: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+  ClientSecret: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+  Channel: MyTwitchChannel
+OBS:
+  Scene: _Dice
+  Host: 127.0.0.1
+  Port: 4455
+  Password: xxxxxxxxxxxxxxx
+Commands:
   - Name: roll
     Dice: 1d20
     Message: '{user} rolled {result}'
@@ -13,13 +20,6 @@ General:
     Dice: 1d100+1d10
     Message: '{user} rolled {result}%'
     DisplayTime: 5
-Twitch:
-  ClientId: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-  ClientSecret: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-  Channel: MyTwitchChannel
-  Command: roll
-OBS:
-  Scene: _Dice
-  Host: 127.0.0.1
-  Port: 4455
-  Password: xxxxxxxxxxxxxxx
+  - Name: yo
+    Script: |
+      await message.reply("Yo!")
